lab1/Test/L1-A-12-36.output
Error Type B at Line 9
Error Type A at Line 18
Error Type A at Line 23
Error Type B at Line 25
Error Type B at Line 26
Error Type A at Line 30
Error Type B at Line 32
Error Type B at Line 41
Error Type A at Line 46
