lab1/Test/L1-A-12-36.cmm
struct P8o4d {
  int hBM = eVoYB0Itb = nB >= hDRD1uje48V1MDOLLSu 
    + - ! AqrnbUbLQ6K [ ALxhJ1 = K4vo = l3XO1uaXpI4 = 
    kWvllCBeroHFfn || GkRtT_oXl0 && zqmoOBx849zshDh == 
    qFZIi - GGEt8f * - tBp3ugFObLeZlgYIv ( DxoBYp0fu004t5eQ 
    && xMXfq2D ( wpUyc0 , HcVHY_peYrt = vWcDxtTxS0d2 && 
    oWjPXW17Hz0lvzbnps > o1e0dBgL6b - IV / iNpeZ [ f = 
    oPepOj1D_WllR <= yGuhEMc ( RE < - - ( Q0Bl21q4E7d5pHwSB 
    ) ) . CM0z6aFRLvQR6DFOpa * ] * 1046230202 ) != ! - 
    jOkZ_7 ) / hE4a7CBc6Q16QIW ( ) . kCD ] ;
}ucoSauNQ4HP [ 545999878 ] , Wb4iaRM4D 

;
int ZE5bA 
;
struct sRfE ltyi6jau ( struct RPZZlsHCym TN17YO9icgUvz8fQkm4_ 
  ) {
  int hZqf5 `, anP ;
}
float ;
struct {
};
struct Q_H_rMPW5dzg ~;
int 
int ;
int gHuk9ACED9ph ( int bradcYJP3CTu66m int YisyzM9a5w6KQr_hg8sm 
  ) {
}
int zAyZGG ( ) {
  if ( IGY7py_asfEFFw54tC \)   RVSho7GMi93oyHJriZ 
    ;
else   if gA )   if ( pworY8daN7rcu )   eqF9SA59XseM 
    ;
else {
    while ( O9yvpaq8uZsA2 )     a ;

  }


  return zP5 
}
int ;
int ;
int ;
int ;
: